2015-10-27 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: actually was this file that had to be changed

2015-10-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl: now renaming the [exit] core command into ::Rivet::tclcore_exit
    and replacing with a Tcl scripts that calls ::rivet::thread_exit
    * rivet/packages/hexglyphs/hexglyphs.tcl: package generating ASCII 
    glyphs of hexadecimal characters and punctuation character : and -

2015-10-18 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: returning HTTP_INTERNAL_SERVER_ERROR
    to requests coming in during a process shutdown. This is required
    by the exit command handling
    * src/mod_rivet/mod_rivet.c: changed some log message calls
    in order to have ap_log_rerror when an error occurs during
    a request processing 

2015-10-17 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c,rivet_prefork_mpm.c,mod_rivet.c:
    bridge jump table macro definition

2015-10-14 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/hexgliphs/hexgliphs.tcl: new package HexGliphs
    to print hexadecimal character gliphs as ascii art

2015-10-04 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet.c: moving Rivet_ProcessorCleanup in 
    mod_rivet_common.c
    * src/mod_rivet/mod_rivet.h: add exit status code to
    thread private data
    * src/mod_rivet/mod_rivet_common.c: Rivet_ProcessorCleanup now
    in this file
    * src/mod_rivet/rivet_worker_mpm.c: thread exit handling
    now calling the finalize handling function. Functions naming
    scheme reformed. Since the exit_thread command forces
    the whole child process to exit the check on the thread
    counter in the supervisor thread was changed as the thread
    executing thread_exit brings about can't exit before
    the supervisor itself terminates
    * src/mod_rivet/rivet_prefork_mpm.c: function naming scheme
    changed.
