@@ -1,0 +1,8 @@
+# -- exit.tcl
+#
+# testing effects of calling the core exit command which
+# actually should have been trapped by ::rivet::exit
+#
+# $Id: $
+
+::exit 100
